--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="experience-card">
             <div class="exp-header">
                 <div class="exp-logo">
-                    <img src="./assets/images/codechef-logo.png" alt="CodeChef">
+                    <img src="./assets/Images/Codechef_logo.svg.png" alt="CodeChef">
                 </div>
                 <div class="exp-title">
                     <h3>Educator</h3>
