--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://www.linkedin.com/in/artiwari10/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://leetcode.com/YourProfile"><i class="fas fa-code"></i></a>
             </div>
-            <a href="./assets/Anmol_Ratan_Tiwari_2024.pdf" class="resume-btn view-btn" target="_blank">
+            <a href="./assets/Anmol Ratan Tiwari 2024.pdf" class="resume-btn view-btn" target="_blank">
                 <i class="fas fa-eye"></i> View Resume
             </a>
         </div>
@@ -180,8 +180,12 @@
                     <span>CSS</span>
                     <span>JavaScript</span>
                 </div>
-                <a href="https://github.com/YourRepo/Signature" class="project-link" target="_blank">
-                    <i class="fab fa-github"></i> View Project
+                <a href="https://github.com/artiwari10/Signature" class="project-link" target="_blank">
+                    <i class="fab fa-github"></i> View Project repositorie
+                </a>
+                
+                <a href="https://artiwari10.github.io/Signature/" class="project-link" target="_blank">
+                    <i class="fab fa-github"></i> Live Project
                 </a>
             </div>
         </div>
