--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="social-links">
                 <a href="https://github.com/artiwari10"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/artiwari10/"><i class="fab fa-linkedin"></i></a>
-                <a href="https://leetcode.com/YourProfile"><i class="fas fa-code"></i></a>
+                <a href="https://leetcode.com/u/artiwari10/"><i class="fas fa-code"></i></a>
             </div>
             <a href="./assets/Anmol Ratan Tiwari 2024.pdf" class="resume-btn view-btn" target="_blank">
                 <i class="fas fa-eye"></i> View Resume
@@ -181,11 +181,11 @@
                     <span>JavaScript</span>
                 </div>
                 <a href="https://github.com/artiwari10/Signature" class="project-link" target="_blank">
-                    <i class="fab fa-github"></i> View Project repositorie
+                    <i class="fab fa-github"></i> GitHub
                 </a>
                 
                 <a href="https://artiwari10.github.io/Signature/" class="project-link" target="_blank">
-                    <i class="fab fa-github"></i> Live Project
+                    <i class="fab fa-github"></i> Live 
                 </a>
             </div>
         </div>
@@ -199,24 +199,28 @@
                 <i class="fas fa-certificate"></i>
                 <h3>Java DSA Mastery</h3>
                 <p>Completed Java DSA Course Master the Fundamentals and Beyond</p>
+                <a href="https://moonshot.scaler.com/s/li/4kH_CcnlN-" target="_blank" class="achievement-link">View Certificate</a>
             </div>
 
             <div class="achievement-card">
                 <i class="fas fa-star"></i>
                 <h3>CodeChef Rating</h3>
                 <p>Maximum 4-Star Rating on CodeChef</p>
+                <a href="https://www.linkedin.com/posts/artiwari10_codechef-thankyou-coding-activity-6955516750226427904-GZ5n?utm_source=share&utm_medium=member_desktop" target="_blank" class="achievement-link">Profile</a>
             </div>
 
             <div class="achievement-card">
                 <i class="fas fa-award"></i>
                 <h3>HackerRank Achievements</h3>
                 <p>5★ C++, 4★ Java, 4★ Problem Solving</p>
+                <a href="https://www.hackerrank.com/profile/artiwari10" target="_blank" class="achievement-link">View Profile</a>
             </div>
 
             <div class="achievement-card">
                 <i class="fas fa-trophy"></i>
                 <h3>TechGig Code Gladiators 2022</h3>
                 <p>Semi-Finalist among 356,048 participants</p>
+                <a href="./assets/Techgig Finalist certificate 2022.pdf" target="_blank" class="achievement-link">View Certificate</a>
             </div>
 
             <div class="achievement-card">
@@ -237,12 +241,22 @@
     <section id="activities" class="activities">
         <h2 class="section-title">Extracurricular Activities</h2>
         <div class="activity-card">
-            <h3>30-Hour Java Workshop</h3>
-            <ul>
-                <li>Taught Java and OOP concepts to 1st and 2nd-year students</li>
-                <li>Conducted two contests on Java DSA and syntax</li>
-                <li>Engaged with over 200 student participants</li>
-            </ul>
+            <div class="activity-content">
+                <div class="activity-image">
+                    <img src="./assets/images/java-workshop.jfif" alt="Java Workshop">
+                </div>
+                <div class="activity-details">
+                    <h3>30-Hour Java Workshop</h3>
+                    <ul>
+                        <li>Taught Java and OOP concepts to 1st and 2nd-year students</li>
+                        <li>Conducted two contests on Java DSA and syntax</li>
+                        <li>Engaged with over 200 student participants</li>
+                    </ul>
+                    <a href="your-workshop-certificate" target="_blank" class="activity-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
