--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Anmol Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="visitor-counter.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
@@ -65,7 +66,7 @@
                     <a href="https://www.linkedin.com/in/artiwari10/"><i class="fab fa-linkedin"></i></a>
                     <a href="https://leetcode.com/u/artiwari10/"><i class="fas fa-code"></i></a>
                 </div>
-                <a href="./assets/Anmol Ratan Tiwari 2024.pdf" class="resume-btn view-btn" target="_blank">
+                <a href="./assets/Anmol Ratan Tiwari Resume.pdf" class="resume-btn view-btn" target="_blank">
                     <i class="fas fa-eye"></i> View Resume
                 </a>
             </div>
@@ -195,6 +196,30 @@
             <div class="scroll-indicator scroll-left" onclick="scrollProjects(-1)">
                 <i class="fas fa-chevron-left"></i>
             </div>
+            <div class="project-container">
+                <div class="project-card">
+                    <div class="project-content">
+                        <h3>Campus Dev Match</h3>
+                        <p>Campus Dev Match is a web platform designed to help developers find their ideal coding buddy. By matching users based on their college and skills, it enables meaningful connections with like-minded programmers.</p>
+                        <div class="tech-stack">
+                            
+                            <span class="tech">Npde.js</span>
+                            <span class="tech">Express</span>
+                            <span class="tech">MongoDB</span>
+                            <span class="tech">HTML</span>
+                            <span class="tech">TailwindCSS</span>
+                            <span class="tech">JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/artiwari10/CampusDevMatch-Backend-Frontend" target="_blank" class="btn">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                            <a href="https://campus-dev-match-backend-frontend.vercel.app/" target="_blank" class="btn btn-live">
+                                <i class="fas fa-external-link-alt"></i> Live
+                            </a>
+                        </div>
+                    </div>
+                </div>
             <div class="project-container">
                 <div class="project-card">
                     <div class="project-content">
@@ -438,7 +463,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Anmol Ratan Tiwari. All rights reserved.</p>
+            <p>&copy; 2025 Anmol Ratan Tiwari. All rights reserved.</p>
             <div class="visitor-stats">
                 <i class="fas fa-eye"></i>
                 <span id="footer-visits">0</span> Total Visits
@@ -448,46 +473,12 @@
 
     <!-- Add visitor counter script -->
     <script>
-        // Function to format numbers with commas
-        function formatNumber(num) {
-            return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-        }
-
-        // Function to update visitor count
-        function updateVisitorCount() {
-            // Check if this is a new visit
-            const lastVisit = localStorage.getItem('lastVisit');
-            const now = new Date().getTime();
-            const oneDay = 24 * 60 * 60 * 1000; // milliseconds in a day
-
-            // If no previous visit or last visit was more than a day ago
-            if (!lastVisit || (now - parseInt(lastVisit)) > oneDay) {
-                fetch('https://api.countapi.xyz/hit/artiwari10-portfolio/visits')
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.value) {
-                            localStorage.setItem('visitorCount', data.value);
-                            document.getElementById('visits').textContent = formatNumber(data.value);
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Error fetching visitor count:', error);
-                        const savedCount = localStorage.getItem('visitorCount') || '0';
-                        document.getElementById('visits').textContent = formatNumber(parseInt(savedCount));
-                    });
-
-                // Update last visit timestamp
-                localStorage.setItem('lastVisit', now.toString());
-            } else {
-                // Use cached count
-                const savedCount = localStorage.getItem('visitorCount') || '0';
-                document.getElementById('visits').textContent = formatNumber(parseInt(savedCount));
-            }
-        }
-
-        // Call the function when page loads
-        document.addEventListener('DOMContentLoaded', updateVisitorCount);
+<script>
+function cb(response) {
+    document.getElementById('visits').innerText = response.value;
+}
+</script>
+<script async src="https://api.countapi.xyz/hit/https://artiwari10.github.io/Portfolio/visits?callback=cb"></script>
     </script>
 </body>
 </html>
->>>>>>> d10f9d7 (Updated Certificates)
