--- a/index.html
+++ b/index.html
@@ -159,6 +159,29 @@
         <!-- Experience Section -->
         <section id="experience" class="experience">
             <h2 class="section-title">Experience</h2>
+             <div class="experience-card">
+                <div class="exp-header">
+                    <div class="exp-logo">
+                        <img src="./assets/Images/mavenir_logo.png" alt="Mavenir">
+                    </div>
+                    <div class="exp-title">
+                        <h3>Graduate Engineer</h3>
+                        <span class="exp-duration">June - Current, 2025</span>
+                    </div>
+                </div>
+                <div class="exp-company">
+                    <span class="company-name"><a href="https://www.mavenir.com/" target="_blank">Mavenir</a></span>
+                    <span class="exp-location">Location : Gurugram</span>
+                </div>
+                <ul class="exp-responsibilities">
+                    <li>Deploy and manage application pods by configuring Kubernetes and YAML manifests.</li>
+                    <li>Monitor pod health, debug failures and perform redeployment to ensure high availability and reliability</li>
+                    <li>Collaborate with customers in live CLI and ArgoCD deployment sessions, providing technical support and guidance
+on pod deployment and configuration.</li>
+                    <li>Work with CI/CD pipelines for automated deployment and environment consistency.</li>
+                </ul>
+            
+            </div>
             <div class="experience-card">
                 <div class="exp-header">
                     <div class="exp-logo">
@@ -185,6 +208,7 @@
                     </a>
                 </div>
             </div>
+           
         </section>
 
         <!-- Projects Section -->
